fixed spacing issue in card

--- a/src/components/artist/artist.css
+++ b/src/components/artist/artist.css
@@ -28,7 +28,7 @@ h4 {
     height: 180px;
     object-fit: cover;
     border-radius: 50%;
-    padding-left: 0.5rem;
+    padding-left: 0.7rem;
   }
   p {
     color: #ffffff;
